<resources>
    <string name="app_name">ImperiumGym</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="d_acord">D\'acord</string>
    <string name="error">Error</string>
    <string name="carregant">Carregant...</string>
    <string name="nav_inici">Inici</string>
    <string name="nav_classes">Classes</string>
    <string name="nav_botiga">Botiga</string>
    <string name="nav_noticies">Notícies</string>
    <string name="nav_calendari">Calendari</string>
    <string name="nav_contacte">Contacte</string>
    <string name="main_titol">ImperiumGYM APP</string>
    <string name="btn_inicia_sessio">Inicia sessió</string>
    <string name="btn_registre">Registra\'t</string>
    <string name="login_titol_usuari">Nom d\'usuari</string>
    <string name="login_hint_usuari">Introdueix el teu nom d\'usuari</string>
    <string name="login_titol_contrasenya">Contrasenya</string>
    <string name="login_hint_contrasenya">Introdueix la contrasenya</string>
    <string name="login_oblidada">Has oblidat la contrasenya?</string>
    <string name="login_boto">Inicia Sessió</string>
    <string name="login_error_camps">Introdueix nom d\'usuari i contrasenya</string>
    <string name="login_error_credencials">Usuari o contrasenya incorrectes</string>
    <string name="login_exit">Sessió iniciada correctament</string>
    <string name="login_error_servidor">No s\'ha pogut connectar al servidor: %s</string>
    <string name="register_titol_usuari">Nom d\'usuari</string>
    <string name="register_hint_usuari">Escull un nom d\'usuari</string>
    <string name="register_titol_email">Email</string>
    <string name="register_hint_email">Introdueix el teu email</string>
    <string name="register_titol_contrasenya">Contrasenya</string>
    <string name="register_hint_contrasenya">Crea una contrasenya</string>
    <string name="register_boto">Registra\'t</string>
    <string name="register_error_camps">Omple tots els camps</string>
    <string name="register_error_email">Introdueix un email vàlid</string>
    <string name="register_error_password">La contrasenya ha de tenir almenys 4 caràcters</string>
    <string name="register_exit">Usuari registrat correctament</string>
    <string name="register_error_exists">Error en el registre. L\'email o nom d\'usuari ja poden estar en ús.</string>
    <string name="benvinguda">Bon Dia, %s!</string>
    <string name="home_benvinguda">Bon Dia, %s!</string>
    <string name="home_eslogan">Nomes per als mes DURS</string>
    <string name="home_ajuda">Ajuda - En desenvolupament</string>
    <string name="menu_perfil">Informació de Perfil</string>
    <string name="menu_idioma">Idioma</string>
    <string name="menu_tancar_sessio">Tancar Sessió</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_documentacio">Documentació</string>
    <string name="selecciona_idioma">Selecciona un idioma</string>
    <string name="confirmar_canvi_idioma">Confirmar canvi d\'idioma</string>
    <string name="missatge_confirmar_idioma">Estàs segur que vols canviar l\'idioma a %s?</string>
    <string name="idioma_canviat">Idioma canviat a %s</string>
    <string name="dialog_idioma_titol">Selecciona un idioma</string>
    <string name="dialog_idioma_confirmar_titol">Confirmar canvi d\'idioma</string>
    <string name="dialog_idioma_confirmar_missatge">Estàs segur que vols canviar l\'idioma a %s?</string>
    <string name="dialog_idioma_exit">Idioma canviat a %s</string>
    <string name="idioma_espanyol">Español</string>
    <string name="idioma_catala">Català</string>
    <string name="idioma_angles">English</string>
    <string name="classes_titol">Classes</string>
    <string name="classes_subtitol">Reserva la teva classe preferida</string>
    <string name="classe_zumba">Zumba</string>
    <string name="classe_spinning">Spinning</string>
    <string name="classe_bodypump">Body Pump</string>
    <string name="btn_reserva_ara">Reserva ara</string>
    <string name="reserva_titol">Reserva de Classe</string>
    <string name="reserva_subtitol">Confirma la teva reserva</string>
    <string name="reserva_usuari_missatge" formatted="false">%s, reservaràs classe de %s</string>
    <string name="reserva_selector_horari">Selecciona l\'horari</string>
    <string name="reserva_data">Data (opcional)</string>
    <string name="reserva_data_hint">Selecciona una data (opcional)</string>
    <string name="reserva_notes">Notes addicionals</string>
    <string name="reserva_notes_hint">Alguna preferència o comentari (ex: lesions, necessitats especials...)</string>
    <string name="reserva_boto_confirmar">Confirmar Reserva</string>
    <string name="reserva_confirmada">Reserva realitzada!</string>
    <string name="reserva_exit">Reserva guardada correctament</string>
    <string name="introdueix_usuari_contrasenya">Introdueix nom d\'usuari i contrasenya</string>
    <string name="sessio_iniciada">Sessió iniciada correctament</string>
    <string name="error_credencials">Usuari o contrasenya incorrectes</string>
    <string name="error_servidor">No s\'ha pogut connectar al servidor: %s</string>
    <string name="omple_tots_els_camps">Omple tots els camps</string>
    <string name="email_invalid">Introdueix un email vàlid</string>
    <string name="password_min">La contrasenya ha de tenir almenys 4 caràcters</string>
    <string name="registre_ok">Usuari registrat correctament</string>
    <string name="error_registre">Error en el registre. L\'email o nom d\'usuari ja poden estar en ús.</string>
    <string-array name="horaris_classes">
        <item>09:00 - 10:00</item>
        <item>11:00 - 12:00</item>
        <item>13:00 - 14:00</item>
        <item>16:00 - 17:00</item>
        <item>18:00 - 19:00</item>
        <item>20:00 - 21:00</item>
    </string-array>
    <string name="botiga_titol">La Imperial Store</string>
    <string name="botiga_subtitol">Equipa\'t com un campió</string>
    <string name="botiga_cistella">Cistella</string>
    <string name="producte_proteina">Proteïna</string>
    <string name="producte_camiseta">Camiseta Gym</string>
    <string name="producte_desc_proteina">Proteïna de sèrum d\'alta qualitat. Perfecta per després de l\'entrenament per a la recuperació muscular.</string>
    <string name="producte_desc_camiseta">Camiseta oficial d\'ImperiumGym. 100% cotó, transpirable i còmoda per als teus entrenaments.</string>
    <string name="producte_preu_proteina">39,99€</string>
    <string name="producte_preu_camiseta">19,99€</string>
    <string name="btn_comprar_ara">Compra ara</string>
    <string name="producte_detall_titol">Detall del producte</string>
    <string name="producte_detall_subtitol">Tria la quantitat i compra</string>
    <string name="producte_quantitat">Quantitat:</string>
    <string name="producte_quantitat_default">1</string>
    <string name="btn_afegir_cistella">Afegir a la cistella</string>
    <string name="btn_pagar_ara">Pagar ara</string>
    <string name="producte_afegit_cistella">Afegit a la cistella (%d unitat/es)</string>
    <string name="cistella_titol">La meva cistella</string>
    <string name="cistella_subtitol">Revisa els teus productes</string>
    <string name="cistella_total">Total: %.2f€</string>
    <string name="cistella_boto_pagament">Procedir al pagament</string>
    <string name="cistella_buida">La cistella està buida</string>
    <string name="cistella_eliminar_titol">Eliminar producte</string>
    <string name="cistella_eliminar_missatge">Vols eliminar aquest producte de la cistella?</string>
    <string name="cistella_buidar">Buidar</string>
    <string name="cistella_buidar_titol">Buidar cistella</string>
    <string name="cistella_buidar_missatge">Vols eliminar tots els productes de la cistella?</string>
    <string name="cistella_buidada">Cistella buidada correctament</string>
    <string name="pagament_titol_producte">Pagament del Producte</string>
    <string name="pagament_titol_cistella">Pagament de la cesta</string>
    <string name="pagament_subtitol">Introdueix les dades de pagament</string>
    <string name="pagament_resum_comanda">Resum de la comanda</string>
    <string name="pagament_total">Total: %.2f€</string>
    <string name="pagament_direccio_titol">Direcció d\'enviament</string>
    <string name="pagament_nom_complet">Nom complet</string>
    <string name="pagament_adreca">Adreça</string>
    <string name="pagament_ciutat">Ciutat</string>
    <string name="pagament_codi_postal">Codi postal</string>
    <string name="pagament_targeta_titol">Dades de la targeta</string>
    <string name="pagament_numero_targeta">Número de targeta</string>
    <string name="pagament_nom_titular">Nom del titular</string>
    <string name="pagament_data_caducitat">MM/AA</string>
    <string name="pagament_cvv">CVV</string>
    <string name="pagament_boto">Pagar ara</string>
    <string name="pagament_error_camps">Omple tots els camps de pagament</string>
    <string name="pagament_exit">Pagament realitzat amb èxit</string>
    <string name="pagament_completat">Compra realitzada!</string>
    <string name="confirmacio_reserva">Reserva realitzada!</string>
    <string name="confirmacio_compra">Compra realitzada!</string>
    <string name="perfil_titol">Compte d\'Usuari</string>
    <string name="perfil_subtitol">Gestiona les teves dades</string>
    <string name="perfil_nom">Nom</string>
    <string name="perfil_email">Email</string>
    <string name="perfil_contrasenya">Contrasenya</string>
    <string name="perfil_guardar_canvis">Guardar canvis</string>
    <string name="perfil_canviar_contrasenya">Canviar contrasenya</string>
    <string name="perfil_error_camps">Omple tots els camps</string>
    <string name="perfil_exit">Dades actualitzades correctament</string>
    <string name="perfil_mostrar_contrasenya">Mostrar contrasenya</string>
    <string name="canvi_contrasenya_titol">Canviar contrasenya</string>
    <string name="canvi_contrasenya_subtitol">Introdueix la nova contrasenya</string>
    <string name="canvi_nova_contrasenya">Nova contrasenya</string>
    <string name="canvi_confirmar_contrasenya">Confirmar contrasenya</string>
    <string name="canvi_boto_guardar">Guardar contrasenya</string>
    <string name="canvi_error_buits">Omple tots dos camps</string>
    <string name="canvi_error_longitud">La contrasenya ha de tenir almenys 4 caràcters</string>
    <string name="canvi_error_coincidir">Les contrasenyes no coincideixen. Torna a provar.</string>
    <string name="canvi_exit">Contrasenya canviada correctament</string>
    <string name="canvi_confirmar_dialog">Estàs segur que vols canviar la contrasenya?</string>
    <string name="calendari_titol">Calendari</string>
    <string name="calendari_subtitol">Les teves reserves</string>
    <string name="calendari_sense_reserves">Cap reserva per aquest dia</string>
    <string name="calendari_reserves_titol">Reserves del dia</string>
    <string name="calendari_reserves_missatge">Reserves per al %s:\n\n</string>
    <string name="contacte_titol">Contacte</string>
    <string name="contacte_subtitol">Posa\'t en contacte amb nosaltres</string>
    <string name="contacte_adreca_titol">Adreça</string>
    <string name="contacte_adreca_text">Carrer de l\'Esport, 10\n08001 Barcelona</string>
    <string name="contacte_telefon_titol">Telèfon</string>
    <string name="contacte_telefon_text">+34 932 123 456</string>
    <string name="contacte_email_titol">Email</string>
    <string name="contacte_email_text">info@imperiumgym.com</string>
    <string name="contacte_horari_titol">Horari</string>
    <string name="contacte_horari_text">Dilluns a Divendres: 7:00 - 22:00\nDissabte: 9:00 - 20:00\nDiumenge: 10:00 - 14:00</string>
    <string name="contacte_boto">Envia\'ns un missatge</string>
    <string name="noticies_titol">Notícies</string>
    <string name="noticies_subtitol">Mantén-te informat de les novetats</string>
</resources>